# pi_rc_bot

./: .env.example  .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
.github/: copilot-instructions.md
.github/prompts/: copilot.md
OpenCode/: AGENTS.md  README.md  config.yaml  main.py  opencode.json  session_result.json
OpenCode/codex_agent/: AGENTS.md  config.yaml  main_codex.py  opencode.json
OpenCode/repair_agent/: AGENTS.md  config.yaml  main_repair.py  opencode.json
OpenCode/src/: __init__.py  client.py  config.py  memory.py  process_manager.py  prompts.py  sensor.py  supervisor.py
agent/: __init__.py  requirements.txt
agent/advisor/: README.md  __init__.py  config.yaml  main.py
agent/advisor_split_brain_move/: README.md  __init__.py  config.yaml  main.py
agent/head/: README.md  __init__.py  config.yaml  main.py
agent/listener/: README.md  __init__.py  config.yaml  main.py
agent/memorizer/: README.md  __init__.py  config.yaml  main.py  smoke_offline.py
agent/mover/: README.md  __init__.py  config.yaml  main.py
agent/observer/: README.md  __init__.py  config.yaml  main.py
agent/perception/: README.md  __init__.py  config.yaml  main.py
agent/proximity/: README.md  __init__.py  config.yaml  main.py
agent/safety/: README.md  __init__.py  config.yaml  main.py
agent/speaker/: README.md  __init__.py  config.yaml  main.py
agent/src/: __init__.py  base_agent.py  config.py  workbench.py
agent/todo/: README.md  __init__.py  config.yaml  main.py
docs/: advisor_split_brain_move.md
memory/todo/: state.json
scripts/: install.sh  install_systemd_user_units.sh  uninstall.sh  wait_for_network.sh
services/: brain.sh  config.yaml  kill_all.sh  main.sh  move_cluster.sh
(+110 files in other folders)
