[project]
name = "pi-rc-bot"
version = "0.1.0"
description = "Pi RC Bot"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "pyyaml>=6.0.3",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_rc_bot"]
