[project]
name = "pi-rc-bot"
version = "0.1.0"
description = "Pi RC Bot"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "aiohttp>=3.9",
    "numpy>=2.4.2",
    "pytest>=9.0.2",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_rc_bot"]
