[project]
name = "pi-rc-bot"
version = "0.1.0"
description = "Pi RC Bot"
requires-python = ">=3.12"
dependencies = [
    "agent-framework>=1.0.0b251120",
    "aiohttp>=3.9",
    "beautifulsoup4>=4.14.3",
    "duckduckgo-search>=8.1.1",
    "fastapi>=0.129.0",
    "fastmcp>=2.14.5",
    "feedparser>=6.0.12",
    "ffmpeg-python>=0.2.0",
    "google-api-python-client>=2.190.0",
    "google-auth>=2.48.0",
    "google-auth-oauthlib>=1.2.4",
    "httpx>=0.28.1",
    "numpy>=2.4.2",
    "pydantic>=2.12.5",
    "pygame>=2.6.1",
    "pytest>=9.0.2",
    "python-vlc>=3.0.21203",
    "pyyaml>=6.0.3",
    "requests>=2.32.5",
    "sounddevice>=0.5.5",
    "sympy>=1.14.0",
    "uvicorn>=0.40.0",
    "yt-dlp>=2026.2.4",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/pi_rc_bot"]
